# moodscape-podcasts

./: .gitignore  CLAUDE.md  README.md  dev.sh
assets/: README.md
assets/ambient/: README.md
assets/series/: the-shared-space.json
assets/speakers/reference_text/: Max.txt
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: ambient.py  generate.py  health.py  jobs.py  series.py  voices.py
backend/app/core/: ambient.py  chunker.py  emotion.py  engine.py  errors.py  f5_text.py  ffmpeg_stitch.py  jobs.py  models.py  orchestrator.py  podcast_music.py  qc.py  ref_clean.py  script_parser.py  sleep_post.py  sleep_text.py  stitcher.py  text_processor.py
backend/app/providers/: __init__.py  base.py  bootstrap.py  cosyvoice_provider.py  elevenlabs_provider.py  f5_provider.py  f5_voice_registry.py  kokoro_provider.py  reference_voice_registry.py  registry.py
backend/app/storage/: ambient_registry.py  files.py  series_registry.py
backend/scripts/: bench_cosyvoice.py  bench_f5.py  bench_longform.py
backend/tests/: conftest.py  test_ambient.py  test_ambient_registry.py  test_api.py  test_chunker.py  test_cosyvoice_provider.py  test_elevenlabs_provider.py  test_engine.py  test_f5_provider.py  test_f5_text.py  test_f5_voice_registry.py  test_ffmpeg_stitch.py  test_jobs.py  test_jobs_api.py  test_kokoro_provider.py  test_orchestrator.py  test_qc.py  test_ref_clean.py  test_script_parser.py  test_sleep_post.py  test_sleep_text.py  test_stitcher.py  test_text_processor.py
docs/: ARCHITECTURE.md  CHANGELOG.md
docs/prompting_guides/: README.md  elevenlabs.md  elevenlabs_podcast.md  elevenlabs_sleep.md  f5.md  f5_sleep.md  kokoro.md  kokoro_sleep.md
docs/superpowers/plans/: 2026-06-20-f5-sleep-quality-improvement.md  2026-06-20-m4a-default-export.md
docs/superpowers/specs/: 2026-06-15-async-pipeline-and-sleep-stories-design.md  2026-06-15-local-tts-providers-design.md  2026-06-15-moodscape-podcasts-design.md  2026-06-16-podcast-pacing-emotion-design.md  2026-06-17-cosyvoice3-mlx-sleep-provider-design.md  2026-06-17-model-specific-tts-tailoring.md  2026-06-19-elevenlabs-expressive-podcast-calm-sleep-design.md  2026-06-19-longform-qc-design.md  2026-06-19-podcast-branding-intro-outro-design.md  2026-06-19-reference-clip-upload-design.md  2026-06-20-elevenlabs-sleep-perfecting-design.md  2026-06-20-elevenlabs-sleep-quality-pipeline-design.md  2026-06-20-f5-sleep-quality-improvement-design.md  2026-06-20-kokoro-punctuation-to-pauses-design.md  2026-06-20-kokoro-sleep-quality-refinement-design.md  2026-06-20-m4a-default-export-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/api/: client.ts  jobs.ts
frontend/src/components/: AddVoice.tsx  ContentTypeSelector.tsx  Icon.tsx  ProgressBar.tsx  ResultPlayer.tsx  ScriptInput.tsx  SleepStoryConfig.tsx  SpeakerConfig.tsx  VoiceSelect.tsx
frontend/src/styles/: index.css
