[project]
name = "moodscape-podcasts-backend"
version = "0.1.0"
description = "Moodscape Podcasts backend — multi-speaker script to podcast audio via pluggable TTS providers."
# Upper bound is for the local TTS stack: Kokoro/F5 pull in spacy, which has no
# cp314 wheels yet. 3.13 has wheels for torch + spacy + the whole stack.
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "sse-starlette>=2.0",
    "pydub>=0.25.1",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "soundfile>=0.12",
    # pydub relies on the stdlib `audioop` module, which was removed in Python 3.13.
    # audioop-lts backports it for 3.13+ (this machine runs 3.14).
    "audioop-lts; python_version >= '3.13'",
    # ── Local TTS models (Kokoro, F5). Heavy; imported lazily at synthesis. ──
    "torch>=2.10",
    "torchaudio>=2.10",
    "transformers>=4.55,<4.58",
    "kokoro>=0.9.4",
    "f5-tts>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "respx>=0.21",
]
# CosyVoice3 (MLX) sleep-story provider — Apple Silicon only, imported lazily at
# synthesis. `mlx-audio-plus` exposes the FunAudioLLM CosyVoice3 runtime and
# imports as `mlx_audio`. Kept out of the base deps so non-Mac/CI installs (and
# `uv run pytest`, which uses fakes) stay clean: opt in with `uv sync --extra mlx`.
mlx = [
    "mlx-audio-plus>=0.1.8",
]
# Long-form quality control (opt-in via Settings.enable_qc) — local Whisper for
# transcript WER + a speaker encoder for cloned-voice drift. Heavy and imported
# lazily inside core/qc.py, so kept out of the base deps: opt in with
# `uv sync --extra qc`. mlx-whisper is Apple-Silicon-only; faster-whisper is the
# CPU fallback, so QC works (more slowly) on any host that installs the extra.
qc = [
    "faster-whisper>=1.0",
    "resemblyzer>=0.1.4",
    "mlx-whisper>=0.4; sys_platform == 'darwin'",
]
# Reference-clip denoising for the voice-upload hygiene step. The baseline hygiene
# (mono/resample/silence-trim/length-cap) uses only pydub, so upload works without
# this; `clean` adds spectral-gate denoising via noisereduce. Imported lazily in
# core/ref_clean.py — opt in with `uv sync --extra clean`.
clean = [
    "noisereduce>=3.0",
]

# Not an installable package — uv just manages the virtualenv + dependencies.
[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
